--- a/MediiDeProgramareProiectWeb/Pages/Cursuri/Index.cshtml
+++ b/MediiDeProgramareProiectWeb/Pages/Cursuri/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/"
 @model MediiDeProgramareProiectWeb.Pages.Cursuri.IndexModel
 
 @{
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.Antrenor.ID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Client.ID)
+                @Html.DisplayFor(modelItem => item.Client.Nume)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DataOrganizarii)
