display name instead of id, change index header

--- a/MediiDeProgramareProiectWeb/Pages/Cursuri/Index.cshtml
+++ b/MediiDeProgramareProiectWeb/Pages/Cursuri/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Cursuri</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -32,7 +32,7 @@
 @foreach (var item in Model.Curs) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Antrenor.ID)
+                @Html.DisplayFor(modelItem => item.Antrenor.Nume)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Client.Nume)
